2002-06-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Changlog: cvs changes ml archive test #8.
	
	* lily/slur-engraver.cc: Layout fix.

2002-06-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (RhythmicStaffContext): add
	Dot_column_engraver, resurrect barlines 
	
	* VERSION: 1.5.62 released.

	* lily/engraver-group-engraver.cc (do_announces): rename
	create_grobs () to process_acknowledged_grobs().

	* lily/grob.cc (programming_error): add programming_error with
	origin location.  

	* lily/tuplet-bracket.cc (parallel_beam): robustness check, don't
	fail if a beam doesn't have stems.  

	* lily/engraver-group-engraver.cc (do_announces): scary change in
	calling convention of create_grobs():  no create_grobs() call
	before acknowledge_grobs().

	* lily/sequential-music-iterator.cc (skip): add support for grace
	notes. 

	* lily/music.cc (Music): fix very subtle and nasty memory
	corruption bug. Typical symptom: "programming_error: Rhythmic_req
	has no duration"

	* mutopia/claop.py: new file: CLA(O)P II by Peter Wallin.

2002-06-19  Han-Wen  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (RhythmicStaffContext): add
	Dot_column_engraver
	

	* lily/parser.yy: various protection fixes. Less objects are now
	overprotected.

2002-06-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/bin/release.py (prev_ver): Bugfix: assume new diff
	naming scheme.

	* Documentation/windows/zlily-profile.sh:
	* Documentation/windows/post-lilypond.sh: Assume normal
	prefix=/usr for lilypond.

	* lily/musical-request.cc (length_mom): Display origin with error.

	* input/test/duration-check.ly: New file.

	* lily/lily-guile.cc (ly_pair_p): [PARANOID]: Check for freed
	cells.

	* lily/part-combine-music-iterator.cc (get_state): Bugfix: use
	ly_symbol2scm to get a scm symbol (rather than ly_str02scm).

	* aclocal.m4:
	* autogen.sh: Regenerate.
	
	* Documentation/topdocs/INSTALL.texi: 
	* configure.in: 
	* stepmake/configure.in: