@@ -1,5 +1,12 @@
 2002-06-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* aclocal.m4: Regenerate.
+
+	* stepmake/aclocal.m4: Also set GUILE_PATCH_LEVEL.
+
+	* config.hh.in: Only set GUILE_MAJOR_VERSION if necessary.
+	* lily/include/lily-guile.hh: Only include config.h if necessary.
+
 	* Changlog: cvs changes ml archive test #8.
 	
 	* lily/slur-engraver.cc: Layout fix.
